Added NSBluetoothPeripheralUsageDescription to the iOS project Plist.

--- a/ios/CARFIT/fr.lproj/InfoPlist.strings
+++ b/ios/CARFIT/fr.lproj/InfoPlist.strings
@@ -9,3 +9,4 @@
 NSCameraUsageDescription = "CARFIT utilise la camera pour prendre des photos de votre véhicule";
 NSLocationAlwaysUsageDescription = "CARFIT utilise constament le service de localisation";
 NSPhotoLibraryUsageDescription = "CARFIT utilise votre librairie pour les photos de votre véhicule";
+NSBluetoothPeripheralUsageDescription = "CARFIT utilist Bluetooth pour connecter au capteur Puls"
